--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group.properties
@@ -89,12 +89,9 @@ g4.totalInvocationCount=10000
 # -------------------------------------------------------------------------
 # Operations:
 #
-# map             Data structure name. This parameter specifies the name of 
-#                 the data structure pertaining to the specified test case.
-#                 For example, if testCase is set to offer, then this parameter
-#                 defines the IQueue name. The parameter name, 'map', is misleading
-#                 but it keeps the original intent of supporting multiple IMDG products,
-#                 some of which may not support non-map data structures.
+# map | rmap | cache | topic | rtopic | queue
+#                 Data structure name. This parameter specifies the name of the
+#                 data structure pertaining to the specified test case.
 #
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
@@ -104,12 +101,11 @@ g4.totalInvocationCount=10000
 #                 If invalid values are entered then the default value is assigned.
 #
 #                 Valid Test Cases: 
-#                   - IMap: set, get, getall, put, putall
-#                   - ICache: cget, cgetall, cput, cputall
-#                   - *ReplicatedMap: rget, rput, rputall
-#                   - IQueue: offer, peek, poll, take
-#                   - ITopic: publish, **publishall
-#                 Default: putall                
+#                   - map (IMap): set, get, getall, put, putall  - Default: putall
+#                   - cache (ICache): get, getall, put, putall   - Default: putall
+#                   - *rmap (ReplicatedMap): get, put, putall    - Default: putall
+#                   - queue (IQueue): offer, peek, poll, take    - Default: offer
+#                   - topic (ITopic): publish, **publishall      - Default: publishall
 #
 #                 * There is no getall API support for ReplicatedMap.
 #                 ** ITopic.publishAll() is a new API only available in Hazelcast 4.1+.
