--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-cache.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-cache.properties
@@ -61,40 +61,37 @@ groupNames=g1&g2,g3&g4
 # Note that you can list more than one operation.
 g1.name=Put Test
 g1.threadCount=8
-g1.operations=cput1
+g1.operations=put1
 g1.comment=ICache.put() test (1 KiB payload in cache1)
 g1.totalInvocationCount=100000
 
 # g2 performs bulk puts using ICache.putAll()
 g2.name=PutAll Test
 g2.threadCount=8
-g2.operations=cputall1
+g2.operations=putall1
 g2.comment=ICache.putAll() test (1 KiB payload in cache2)
 g2.totalInvocationCount=1000
 
 # g3 invokes ICache.get() 100,000 times
 g3.name=Get Test
 g3.threadCount=8
-g3.operations=cget1
+g3.operations=get1
 g3.comment=ICache.get() test (1 KiB payload from cache1)
 g3.totalInvocationCount=100000
 
 # g4 invokes ICache.getAll() 
 g4.name=GetAll Test
 g4.threadCount=8
-g4.operations=cgetall1
+g4.operations=getall1
 g4.comment=ICache.getAll() test (1 KiB payload from cache2)
 g4.totalInvocationCount=10000
 
 # -------------------------------------------------------------------------
 # Operations:
 #
-# map             Data structure name. This parameter specifies the name of 
-#                 the data structure pertaining to the specified test case.
-#                 For example, if testCase is set to offer, then this parameter
-#                 defines the IQueue name. The parameter name, 'map', is misleading
-#                 but it keeps the original intent of supporting multiple IMDG products,
-#                 some of which may not support non-map data structures.
+# map | rmap | cache | topic | rtopic | queue
+#                 Data structure name. This parameter specifies the name of the
+#                 data structure pertaining to the specified test case.
 #
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
@@ -104,12 +101,11 @@ g4.totalInvocationCount=10000
 #                 If invalid values are entered then the default value is assigned.
 #
 #                 Valid Test Cases: 
-#                   - IMap: set, get, getall, put, putall
-#                   - ICache: cget, cgetall, cput, cputall
-#                   - *ReplicatedMap: rget, rput, rputall
-#                   - IQueue: offer, peek, poll, take
-#                   - ITopic: publish, **publishall
-#                 Default: putall                
+#                   - map (IMap): set, get, getall, put, putall  - Default: putall
+#                   - cache (ICache): get, getall, put, putall   - Default: putall
+#                   - *rmap (ReplicatedMap): get, put, putall    - Default: putall
+#                   - queue (IQueue): offer, peek, poll, take    - Default: offer
+#                   - topic (ITopic): publish, **publishall      - Default: publishall (4.x), publish (3.x)
 #
 #                 * There is no getall API support for ReplicatedMap.
 #                 ** ITopic.publishAll() is a new API only available in Hazelcast 4.1+.
@@ -120,12 +116,12 @@ g4.totalInvocationCount=10000
 #                 the prefix defined by the key.prefix property. This property is
 #                 used by the following test cases only.
 #
-#                 Used By: set, put, putall, cput, cputall, rput, rputall, offer, publish, publishall
+#                 Used By: set, put, putall, offer, publish, publishall
 #                 Default: 1024
 #
 # batchSize       The number of objects per putAll() or getAll() call per thread.
 #
-#                 Used By: getall, putall, cgetall, cputall, rputall, publishall
+#                 Used By: getall, putall, publishall
 #                 Default: 100
 #
 # totalEntryCount The total number of entries. 
@@ -145,7 +141,7 @@ g4.totalInvocationCount=10000
 #
 #                       totalEntryCount >= key-number
 #
-#                 *Used By: putall, getall, get, cget, cgetall, cputall, rget, rputall
+#                 *Used By: get, getall, putall
 #                 Default: 10000
 #
 #                 * Note that totalEntryCount is not used by publishall since unlike IMap, ICache
@@ -155,7 +151,7 @@ g4.totalInvocationCount=10000
 # key.prefix      Key names begin with this value. This parameter is optional and used by IMap, ICache,
 #                 and ReplicatedMap.
 #
-#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
+#                 Used By: set, get, getall, put, putall
 #                 Default: k
 #
 # key.startNum    Key start number. Each key name stars with the prefix defined by
@@ -164,31 +160,31 @@ g4.totalInvocationCount=10000
 #                 key.prefix=a and key.startNum=10 produces the first key name, "a10". This parameter is
 #                 used by IMap, ICache, and ReplicatedMap.
 #
-#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
+#                 Used By: set, get, getall, put, putall
 #                 Default: 1
 # -------------------------------------------------------------------------
 
-# cput1
-cput1.map=cache1
-cput1.testCase=cput
-cput1.payloadSize=1024
-cput1.key.prefix=a
-cput1.key.startNum=1
+# put1
+put1.cache=cache1
+put1.testCase=put
+put1.payloadSize=1024
+put1.key.prefix=a
+put1.key.startNum=1
 
-# cputall1
-cputall1.map=cache2
-cputall1.testCase=cputall
-cputall1.totalEntryCount=100000
-cputall1.payloadSize=1024
-cputall1.batchSize=100
-cputall1.key.prefix=a
-cputall1.key.startNum=1
+# putall1
+putall1.cache=cache2
+putall1.testCase=putall
+putall1.totalEntryCount=100000
+putall1.payloadSize=1024
+putall1.batchSize=100
+putall1.key.prefix=a
+putall1.key.startNum=1
 
-# cget1
-cget1.ref=cput1
-cget1.testCase=cget
-cget1.totalEntryCount=100000
+# get1
+get1.ref=put1
+get1.testCase=get
+get1.totalEntryCount=100000
 
-# cgetall1
-cgetall1.ref=cputall1
-cgetall1.testCase=cgetall
+# getall1
+getall1.ref=putall1
+getall1.testCase=getall
