--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-topic.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-topic.properties
@@ -75,12 +75,9 @@ g2.totalInvocationCount=1000
 # -------------------------------------------------------------------------
 # Operations:
 #
-# map             Data structure name. This parameter specifies the name of 
-#                 the data structure pertaining to the specified test case.
-#                 For example, if testCase is set to offer, then this parameter
-#                 defines the IQueue name. The parameter name, 'map', is misleading
-#                 but it keeps the original intent of supporting multiple IMDG products,
-#                 some of which may not have non-map data structures.
+# map | rmap | cache | topic | rtopic | queue
+#                 Data structure name. This parameter specifies the name of the
+#                 data structure pertaining to the specified test case.
 #
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
@@ -90,12 +87,11 @@ g2.totalInvocationCount=1000
 #                 If invalid values are entered then the default value is assigned.
 #
 #                 Valid Test Cases: 
-#                   - IMap: set, get, getall, put, putall
-#                   - ICache: cget, cgetall, cput, cputall
-#                   - *ReplicatedMap: rget, rput, rputall
-#                   - IQueue: offer, peek, poll, take
-#                   - ITopic: publish, **publishall
-#                 Default: putall                
+#                   - map (IMap): set, get, getall, put, putall  - Default: putall
+#                   - cache (ICache): get, getall, put, putall   - Default: putall
+#                   - *rmap (ReplicatedMap): get, put, putall    - Default: putall
+#                   - queue (IQueue): offer, peek, poll, take    - Default: offer
+#                   - topic (ITopic): publish, **publishall      - Default: publishall (4.x), publish (3.x)
 #
 #                 * There is no getall API support for ReplicatedMap.
 #                 ** ITopic.publishAll() is a new API only available in Hazelcast 4.1+.
@@ -106,12 +102,12 @@ g2.totalInvocationCount=1000
 #                 the prefix defined by the key.prefix property. This property is
 #                 used by the following test cases only.
 #
-#                 Used By: set, put, putall, cput, cputall, rput, rputall, offer, publish, publishall
+#                 Used By: set, put, putall, offer, publish, publishall
 #                 Default: 1024
 #
 # batchSize       The number of objects per putAll() or getAll() call per thread.
 #
-#                 Used By: getall, putall, cgetall, cputall, rputall, publishall
+#                 Used By: getall, putall, publishall
 #                 Default: 100
 #
 # totalEntryCount The total number of entries. 
@@ -131,7 +127,7 @@ g2.totalInvocationCount=1000
 #
 #                       totalEntryCount >= key-number
 #
-#                 *Used By: putall, getall, get, cget, cgetall, cputall, rget, rputall
+#                 *Used By: get, getall, putall
 #                 Default: 10000
 #
 #                 * Note that totalEntryCount is not used by publishall since unlike IMap, ICache
@@ -141,7 +137,7 @@ g2.totalInvocationCount=1000
 # key.prefix      Key names begin with this value. This parameter is optional and used by IMap, ICache,
 #                 and ReplicatedMap.
 #
-#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
+#                 Used By: set, get, getall, put, putall
 #                 Default: k
 #
 # key.startNum    Key start number. Each key name stars with the prefix defined by
@@ -150,30 +146,17 @@ g2.totalInvocationCount=1000
 #                 key.prefix=a and key.startNum=10 produces the first key name, "a10". This parameter is
 #                 used by IMap, ICache, and ReplicatedMap.
 #
-#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
+#                 Used By: set, get, getall, put, putall
 #                 Default: 1
-#
-# listener        Enables or disables message listener. If set to true, then a single message listener is
-#                 registered to receive data. You can either publish or receive data, i.el, setting
-#                 'listener' true, disables publishing data and vice versa. You can print the received
-#                 data by setting 'print' true.
-#
-#                 Used By: publish, publishall 
-#                 Default: false
-#
-# print           Enables or disables printing outputs.
-#
-#                 Used By: publish, publishall
-#                 Default: false
 # -------------------------------------------------------------------------
 
 # publish1
-publish1.map=topic1
+publish1.topic=topic1
 publish1.testCase=publish
 publish1.payloadSize=1024
 
 # publishall1
-publishall1.map=topic2
+publishall1.topic=topic2
 publishall1.testCase=publishall
 publishall1.payloadSize=1024
 publishall1.batchSize=100
