Added Jet Kafka transformer

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 				<module>hazelcast-addon-common</module>
 				<module>hazelcast-addon-core-3</module>
 				<module>hazelcast-addon-core-4</module>
+				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
 				<module>snappydata-addon-core</module>
@@ -128,6 +129,7 @@
 				<module>hazelcast-addon-common</module>
 				<module>hazelcast-addon-core-3</module>
 				<module>hazelcast-addon-core-4</module>
+				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
 				<module>snappydata-addon-core</module>
