--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid-no-pvc.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid-no-pvc.yaml
@@ -39,6 +39,8 @@ objects:
                 fieldPath: metadata.namespace
           - name: HAZELCAST_SERVICE
             value: ${HAZELCAST_SERVICE}
+          - name: HAZELCAST_CLUSTER_NAME
+            value: ${HAZELCAST_CLUSTER_NAME}
 parameters:
 - description: The application name
   displayName: Application Name
@@ -50,3 +52,8 @@ parameters:
   name: HAZELCAST_SERVICE
   required: false
   value: hazelcast
+- description: Hazelcast cluster name
+  displayName: Hazelcast cluster name
+  name: HAZELCAST_CLUSTER_NAME
+  required: false
+  value: dev
