--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
@@ -54,6 +54,8 @@ objects:
                 fieldPath: metadata.namespace
           - name: HAZELCAST_SERVICE
             value: ${HAZELCAST_SERVICE}
+          - name: HAZELCAST_CLUSTER_NAME
+            value: ${HAZELCAST_CLUSTER_NAME}
         volumes:
         - name: ${APP_NAME}-data
           persistentVolumeClaim:
@@ -78,3 +80,8 @@ parameters:
   name: HAZELCAST_SERVICE
   required: false
   value: hazelcast
+- description: Hazelcast cluster name
+  displayName: Hazelcast cluster name
+  name: HAZELCAST_CLUSTER_NAME
+  required: false
+  value: dev
