Fixed wrong image name

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet-enterprise-rhel.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet-enterprise-rhel.yaml
@@ -177,7 +177,7 @@ objects:
           - name: JAVA_OPTS
             value: ' -Djet.clientConfig=/data/hazelcast-jet-management-center/hazelcast-client.yaml
               -DserviceName=hazelcast-jet-service -Dnamespace=${namespace} '
-          image: hazelcast/${MANAGEMENT_CENTER_IMAGE}
+          image: ${MANAGEMENT_CENTER_IMAGE}
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
