--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet.yaml
@@ -64,7 +64,7 @@ objects:
             value: ${ENTERPRISE_LICENSE_KEY}
           - name: JAVA_OPTS
             value: -Dhazelcast.config=/data/hazelcast-jet/hazelcast.yaml
-          image: hazelcast/${MANAGEMENT_CENTER_IMAGE}
+          image: ${MANAGEMENT_CENTER_IMAGE}
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
