--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/mancenter-configmap.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/mancenter-configmap.yaml
@@ -7,10 +7,10 @@ metadata:
 data:
   hazelcast-client.yaml: |-
     hazelcast-client:
-      cluster-name: ${CLUSERT_NAME}
+      cluster-name: ${CLUSTER_NAME}
       network:
         kubernetes:
           enabled: true
           namespace: ${NAMESPACE}
           resolve-not-ready-addresses: true
-          service-name: ${SERVER_NAME}
+          service-name: ${MANAGEMENT_CENTER_SERVICE_NAME}
