--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet-enterprise-rhel.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/hazelcast-jet-enterprise-rhel.yaml
@@ -52,7 +52,7 @@ objects:
     selector:
       matchLabels:
         app: hazelcast-jet
-    serviceName: hazelcast-jet-service
+    serviceName: ${SERVICE_NAME}
     template:
       metadata:
         labels:
@@ -112,22 +112,24 @@ objects:
   kind: Service
   metadata:
     name: ${SERVICE_NAME}
+    labels:
+      app: hazelcast-jet
   spec:
     ports:
-    - port: 5701
+    - name: jet
+      port: 5701
       protocol: TCP
-      targetPort: 5701
     selector:
       app: hazelcast-jet
-    sessionAffinity: None
     type: ClusterIP
+    clusterIP: None
 
 - apiVersion: v1
   kind: Service
   metadata:
+    name: ${MANAGEMENT_CENTER_SERVICE_NAME}
     labels:
       app: hazelcast-jet
-    name: ${MANAGEMENT_CENTER_SERVICE_NAME}
   spec:
     ports:
     - name: mc-port
@@ -170,13 +172,10 @@ objects:
         containers:
         - env:
           - name: MC_LICENSE_KEY
-            valueFrom:
-              secretKeyRef:
-                key: key
-                name: jet-license-key-secret
+            value: ${ENTERPRISE_LICENSE_KEY}
           - name: JAVA_OPTS
             value: ' -Djet.clientConfig=/data/hazelcast-jet-management-center/hazelcast-client.yaml
-              -DserviceName=hazelcast-jet-service -Dnamespace=${namespace} '
+              -DserviceName=${SERVICE_NAME} -Dnamespace=${NAMESPACE} '
           image: ${MANAGEMENT_CENTER_IMAGE}
           imagePullPolicy: IfNotPresent
           livenessProbe:
