--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/service-lb.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/jet/openshift/templates/jet/service-lb.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hazelcast-jet-service-lb
+  labels:
+    app: hazelcast-jet
 spec:
   type: LoadBalancer
   selector:
     app: hazelcast-jet
-    role: hazelcast-jet
   ports:
   - protocol: TCP
     port: 5701
