Added the sleep operation for simulating workflows in perf_test

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory.properties
@@ -92,9 +92,14 @@ g4.totalInvocationCount=1000
 # -------------------------------------------------------------------------
 # Operations:
 #
-# map | rmap | cache | topic | rtopic | queue
+# map | rmap | cache | topic | rtopic | queue | sleep
 #                 Data structure name. This parameter specifies the name of the
 #                 data structure pertaining to the specified test case.
+#
+#                 The 'sleep' operation sleeps for the specified amount of time
+#                 in milliseconds. It has no other attributes. For example, 
+#                 'sleep10.sleep=10', sleeps for 10 milliseconds before executing
+#                 the next operation in the group.
 #
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
