--- a/padogrid-tools/pom.xml
+++ b/padogrid-tools/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.4-SNAPSHOT</version>
+		<version>0.9.4</version>
 	</parent>
 	<artifactId>padogrid-tools</artifactId>
 	<packaging>jar</packaging>
