Added support for db ingestion and updated 'test_group' with 'clear' support in Geode

--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-get.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-get.properties
@@ -25,9 +25,6 @@ testIntervalInMsec=0
 # Default: 10 sec
 printStatusIntervalInSec=10
 
-# Turn off logging (recommended)
-geode.logging.type=none
-
 # Group names separated by ',' or '&'. If ',', then the next group executes after
 # the current group completes. If '&', then the current group and the next group
 # execute concurrently. Note that testCount applies per group. For example, if
@@ -67,15 +64,27 @@ g1.totalInvocationCount=100000
 # -------------------------------------------------------------------------
 # Operations:
 #
+# map | region | sleep
+#                 Data structure name. This parameter specifies the name of the
+#                 data structure pertaining to the specified test case. If unspecified
+#                 then it defaults to 'map'. Note that 'map' and 'region' are same.
+#                 Specifying either one will use the GemFire Region data structure.
+#
+#                 The 'sleep' operation sleeps for the specified amount of time
+#                 in milliseconds. It has no other attributes. For example, 
+#                 'sleep10.sleep=10', sleeps for 10 milliseconds before executing
+#                 the next operation in the group.
+#
 # ref             The test case reference name. The defining test case inherits
-#                 all values set by the referenced test case. Referenced properties
-#                 are overwritten if defined.
+#                 all non-factory values set by the referenced test case. The
+#                 properties that begin with 'factory.' are not inherited.
+#                 Referenced properties are overwritten if defined.
 #
 # testCase        Test case.
 #                 If invalid values are entered then the default value is assigned.
 #
-#                 Valid Test Cases: set, get, getall, get, getall.                 
-#                 Default: getall                
+#                 Valid Test Cases:
+#                   - region: get, getall, put, putall  - Default: putall
 #
 # payloadSize     The value object size in bytes. The value object is a blob
 #                 object containing the specified payload size in the form of
@@ -83,7 +92,7 @@ g1.totalInvocationCount=100000
 #                 the prefix defined by the key.prefix property. This property is
 #                 used by the following test cases only.
 #
-#                 Used By: set, put, putall
+#                 Used By: put, putall
 #                 Default: 1024
 #
 # batchSize       The number of objects per putAll() or getAll() call per thread.
@@ -91,11 +100,13 @@ g1.totalInvocationCount=100000
 #                 Used By: putall, getall
 #                 Default: 100
 #
-# totalEntryCount The total number of entries is used by putall, getall, and get.
+# totalEntryCount The total number of entries. 
 #
-#                 - For putall and getall, this value dictates the upper bound of
-#                   the entry count. The number of objects inserted will be less
-#                   than or equal to this value. To insert the exact number of entries
+#                 - For putall and getall, this value dictates the upper bound
+#                   of the entry count. The number of objects inserted will be less
+#                   than or equal to this value. To keep the upper bound, the keys are generated
+#                   in a round-robin fashion to perform updates instead of inserts if the entry
+#                   count reaches the upper limit. To insert the exact number of entries
 #                   defined by totalEntryCount, the following must hold true:
 #
 #                      totalEntryCount = totalInvocationCount * batchSize
@@ -106,11 +117,12 @@ g1.totalInvocationCount=100000
 #
 #                       totalEntryCount >= key-number
 #
-#                 Used By: putall, getall, get
+#                 Used By: get, getall, putall
 #                 Default: 10000
 #
 # key.prefix      Key names begin with this value.
 #
+#                 Used By: get, getall, put, putall
 #                 Default: k
 #
 # key.startNum    Key start number. Each key name stars with the prefix defined by
@@ -118,6 +130,7 @@ g1.totalInvocationCount=100000
 #                 incrementally starting from this value. For example, 
 #                 key.prefix=a and key.startNum=10 produces the first key name, "a10".
 #
+#                 Used By: get, getall, put, putall
 #                 Default: 1
 # -------------------------------------------------------------------------
 
