--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-put-sleep.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-put-sleep.properties
@@ -50,11 +50,11 @@ groupNames=g1
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# Invoke 22 operations that ingest data into Geode using putAll() 
+# Invoke Geode/GemFire operations with sleep in between
 g1.name=Multi-PutAll
 g1.threadCount=10
-g1.operations=put1,put2,put3,put4,put5,put6,put7,put8,put9,put10,put11,put12,put13,put14,put15,put16,put17,put18,put19,put20,put21,put22
-g1.comment=Populates 22 maps in preparation for multi-get tests. Cluster size should be >20 GiB.
+g1.operations=put1,sleep10,put2,sleep200,put3,sleep1000,put4
+g1.comment=Demonstrates sleep operation
 g1.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
@@ -146,7 +146,7 @@ g1.totalInvocationCount=1000
 #      -----  ---------  ----------  ---------
 # Total:  22  1,610,000         N/A      12.93
 # -------------------------------------------------------------------------
- 
+
 put1.map=map1
 put1.testCase=putall
 put1.totalEntryCount=1000000
@@ -171,4 +171,3 @@ sleep200.sleep=200
 
 # sleep 1 sec
 sleep1000.sleep=1000
-
