--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/log4j2.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/log4j2.properties
@@ -18,4 +18,4 @@ appender.file.strategy.type=DefaultRolloverStrategy
 appender.file.strategy.max=100
 
 rootLogger.appenderRefs=file
-rootLogger.appenderRef.file.ref=RollingFile
+#rootLogger.appenderRef.file.ref=RollingFile
