--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-put-sleep.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-put-sleep.properties
@@ -53,11 +53,11 @@ groupNames=g1
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# Invoke 22 operations that ingest data into Hazelcast using putAll() 
+# Invoke Hazelcast operations with sleep in between
 g1.name=Multi-PutAll
 g1.threadCount=10
 g1.operations=put1,sleep10,put2,sleep200,put3,sleep1000,put4
-g1.comment=Populates 22 maps in preparation for multi-get tests. Cluster size should be >20 GiB.
+g1.comment=Demonstrates sleep operation
 g1.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
