--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -1,17 +1,17 @@
-<!-- Copyright (c) 2020 Netcrest Technologies, LLC. All rights reserved.
-     Licensed under the Apache License, Version 2.0 (the "License"); you may not
-     use this file except in compliance with the License. You may obtain a copy
-     of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
-     by applicable law or agreed to in writing, software distributed under the
-     License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
-     OF ANY KIND, either express or implied. See the License for the specific
-     language governing permissions and limitations under the License. -->
+<!-- Copyright (c) 2020 Netcrest Technologies, LLC. All rights reserved. 
+	Licensed under the Apache License, Version 2.0 (the "License"); you may not 
+	use this file except in compliance with the License. You may obtain a copy 
+	of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
 
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	     
+
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>padogrid.addon</groupId>
@@ -26,7 +26,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.12.0</geode.version>
+		<geode.version>1.13.1</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
 		<skipTests>true</skipTests>
 	</properties>
@@ -35,6 +35,28 @@
 	</repositories>
 
 	<dependencies>
+		<!-- Geode -->
+		<dependency>
+			<groupId>org.apache.geode</groupId>
+			<artifactId>geode-core</artifactId>
+			<version>${geode.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geode</groupId>
+			<artifactId>geode-serialization</artifactId>
+			<version>${geode.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geode</groupId>
+			<artifactId>geode-common</artifactId>
+			<version>${geode.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geode</groupId>
+			<artifactId>geode-logging</artifactId>
+			<version>${geode.version}</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
 		<dependency>
 			<groupId>javax.persistence</groupId>
@@ -68,7 +90,7 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.kafka/connect-api -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
@@ -82,7 +104,7 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.1</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -90,7 +112,7 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
