--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -28,13 +28,25 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<geode.version>1.13.1</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
+		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
 
 	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>http://packages.confluent.io/maven/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
+		<!-- PadoGrid -->
+		<dependency>
+			<groupId>padogrid.addon</groupId>
+			<artifactId>padogrid-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<!-- Geode -->
 		<dependency>
 			<groupId>org.apache.geode</groupId>
@@ -96,6 +108,39 @@
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>connect-api</artifactId>
 			<version>2.4.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-core -->
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-core</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
+
+		<!-- Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-tools</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+
+		<!-- Confluent Kafka Connect Avro -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-connect-avro-data</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
 		</dependency>
 
 		<!-- For domain classes -->
