Added support for 'Next' page bundles

--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
@@ -56,7 +56,7 @@ groupNames=g1,g2,g3
 
 # g1 puts 1000 Customer objects into nw/customers defined by the 'put1' operation.
 # Note that you can list more than one operations separated by commas.
-g1.name=Customer Set Test
+g1.name=Customer Put Test
 g1.threadCount=8
 g1.operations=put1
 g1.comment=Stores Customer objects into nw/customers. This test should be carried out with \
@@ -71,7 +71,7 @@ g2.comment=Reads all Customer objects stored by g1.
 g2.totalInvocationCount=1000
 
 # g3 puts 1000 Order objects into nw/orders defined by the 'put1' operation.
-# Note that you can list more than one operations separated by commas.
+# Note that you can list more than one operation separated by comma.
 g3.name=Order Set Test
 g3.threadCount=8
 g3.operations=put2
