--- a/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>org.hazelcast.addon</groupId>
 	<artifactId>padogrid-jet-demo</artifactId>
 	<name>padogrid-jet-demo</name>
-	<version>0.9.5-SNAPSHOT</version>
+	<version>0.9.5</version>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
