--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.5</version>
+		<version>0.9.6-SNAPSHOT</version>
 	</parent>
 	<artifactId>geode-addon-core</artifactId>
 	<packaging>jar</packaging>
