--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
@@ -5,7 +5,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hazelcast.addon</groupId>
-	<version>0.9.5</version>
+	<version>0.9.6-SNAPSHOT</version>
 	<artifactId>padogrid-perf_test</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-perf_test</name>
