Added topic subscriber for perf_test

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-queue.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-queue.properties
@@ -107,11 +107,11 @@ g4.totalInvocationCount=50000
 #                 If invalid values are entered then the default value is assigned.
 #
 #                 Valid Test Cases: 
-#                   - map (IMap): set, get, getall, put, putall  - Default: putall
-#                   - cache (ICache): get, getall, put, putall   - Default: putall
-#                   - *rmap (ReplicatedMap): get, put, putall    - Default: putall
-#                   - queue (IQueue): offer, peek, poll, take    - Default: offer
-#                   - topic (ITopic): publish, **publishall      - Default: publishall (4.x), publish (3.x)
+#                   - map (IMap): set, get, getall, put, putall    - Default: putall
+#                   - cache (ICache): get, getall, put, putall     - Default: putall
+#                   - *rmap (ReplicatedMap): get, put, putall      - Default: putall
+#                   - queue (IQueue): offer, peek, poll, take      - Default: offer
+#                   - topic/rtopic (ITopic): publish, **publishall - Default: publishall (4.x, 5.x), publish (3.x)
 #
 #                 * There is no getall API support for ReplicatedMap.
 #                 ** ITopic.publishAll() is a new API only available in Hazelcast 4.1+.
