Updated Coherence port number and http blocker

--- a/hazelcast-addon-core-3/pom.xml
+++ b/hazelcast-addon-core-3/pom.xml
@@ -31,7 +31,7 @@
 		</repository>
 		<repository>
 			<id>confluent</id>
-			<url>http://packages.confluent.io/maven/</url>
+			<url>https://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
 
@@ -142,7 +142,7 @@
 		<dependency>
 			<groupId>io.confluent</groupId>
 			<artifactId>kafka-connect-avro-data</artifactId>
-			<version>5.5.0</version>
+			<version>5.5.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
