--- a/padogrid-all/padogrid-snappydata-all/pom.xml
+++ b/padogrid-all/padogrid-snappydata-all/pom.xml
@@ -23,7 +23,7 @@
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>Build all jar</description>
-	<url>http://maven.apache.org</url>
+	<url>https://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
