--- a/snappydata-addon-core/pom.xml
+++ b/snappydata-addon-core/pom.xml
@@ -22,7 +22,7 @@
 	<packaging>jar</packaging>
 	<name>snappydata-addon-core</name>
 	<description>SnappyData addon tools for managing SnappyData/ComputeDB clusters and apps</description>
-	<url>http://maven.apache.org</url>
+	<url>https://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
