--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -35,7 +35,7 @@
 	<repositories>
 		<repository>
 			<id>confluent</id>
-			<url>http://packages.confluent.io/maven/</url>
+			<url>https://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
 
@@ -133,7 +133,7 @@
 		<dependency>
 			<groupId>io.confluent</groupId>
 			<artifactId>kafka-connect-avro-data</artifactId>
-			<version>5.5.0</version>
+			<version>5.5.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
