--- a/padogrid-all/padogrid-geode-all/pom.xml
+++ b/padogrid-all/padogrid-geode-all/pom.xml
@@ -36,7 +36,7 @@
 	<repositories>
 		<repository>
 			<id>confluent</id>
-			<url>http://packages.confluent.io/maven/</url>
+			<url>https://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
 
@@ -176,7 +176,7 @@
 		<dependency>
 			<groupId>io.confluent</groupId>
 			<artifactId>kafka-connect-avro-data</artifactId>
-			<version>5.5.0</version>
+			<version>5.5.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
