Added gemfire and coherence support

--- a/hazelcast-addon-core-5/pom.xml
+++ b/hazelcast-addon-core-5/pom.xml
@@ -49,7 +49,7 @@
 		<!-- Hazelcast -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast-enterprise</artifactId>
+			<artifactId>hazelcast</artifactId>
 			<version>${hazelcast.version}</version>
 		</dependency>
 		
