Increased docker mem_limit for Geode.

--- a/padogrid-deployment/src/main/resources/geode/docker/compose/template-docker-compose.yaml
+++ b/padogrid-deployment/src/main/resources/geode/docker/compose/template-docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   locator:
     image: apachegeode/geode:${VERSION}
     hostname: locator
-    mem_limit: 512m
+    mem_limit: 1g
     expose:
       - "$LOCATOR_PORT"
       - "$LOCATOR_JMX_PORT"
