Added ER support for IMap

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
@@ -38,7 +38,7 @@ hazelcast.logging.type=none
 # execute concurrently. Note that testCount applies per group. For example, if
 # testCount=2 and groupName=g1&g2,g3 then g1 and g2 execute concurrently twice
 # before g3 executes twice.
-groupNames=g1,g2
+groupNames=g1
 
 # -------------------------------------------------------------------------
 # Group:
@@ -62,23 +62,16 @@ groupNames=g1,g2
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# g1 sets 100 Customer objects into nw/customers defined by the 'set1' operation.
+# g1 sets 100 Customer objects into customers defined by the 'set1' operation
+# and up to 5 (set1.factory.er.maxKeys) child Order objects per customer into orders
+# defined by the 'set2' operation.
 # Note that you can list more than one operations separated by commas.
 g1.name=Customer Set Test
 g1.threadCount=8
 g1.operations=set1
-g1.comment=Stores Customer objects into nw/customers. This test should be carried out with \
-MapStorePkDbImpl enabled in the cluster to write to the database of your choice.
+g1.comment=Stores Customer objects into customers and Order objects to orders with up to 5 customers \
+ER-mapped per order object.
 g1.totalInvocationCount=100
-
-# g3 sets 100 Order objects into nw/orders defined by the 'set1' operation.
-# Note that you can list more than one operations separated by commas.
-g2.name=Order Set Test
-g2.threadCount=1
-g2.operations=set2
-g2.comment=Stores Order objects into nw/orders. This test case is for ER ingestion only.
-# Set totalInvocationCount to 0 to skip this test case. It is for ER only. See g1.
-g2.totalInvocationCount=100
 
 # -------------------------------------------------------------------------
 # Operations:
