Added factory property descriptons

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
@@ -154,6 +154,28 @@ g1.totalInvocationCount=100
 #
 #                 Used By: set, get, getall, put, putall
 #                 Default: 1
+#
+# factory.class                Factory class that creates custom data objects. This class must implement 
+#                              org.hazelcast.addon.test.perf.data.DataObjectFactory or extend
+#                              org.hazelcast.demo.nw.impl.AbstractDataObjectFactory.
+#
+# factory.key.length           The fixed length of key value. If -1 or 0, then the key value is not formatted
+#                              to a fixed length.
+#                              Default: -1
+#
+# factory.key.isLeadingZeros  If true, zeroes are prepended to key values to create a fixed length. This
+#                             property has no effect if factory.key.length is <= 0.
+#                             Default: false
+#
+# factory.key.isRandom        If true, then the specified er.maxKeys value is used as the upper bound
+#                             to generate a random number in the the range of [1, maxKeys]. If false,
+#                             then the specified maxKeys value is used.
+#                             Default: true
+#
+# factory.er.maxKeys          The maxKeys value is sets the upper bound of the ER key value.
+#                             Default: 1
+#
+# factory.er.operation        ER operation. The specified operation is recursively executed.
 # -------------------------------------------------------------------------
 
 # set1
