Fixed release notes extraction issue

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -31,7 +31,7 @@ jobs:
         shell: bash
 
       - name: Extract Snapshot Release Notes
-        run: sed -n '/.*SNAPSHOT/,/---/p' RELEASE_NOTES.md  | sed -n '/^-/,/$/p' | sed '/^---/d' >> snapshot-release-notes.md
+        run: sed -n '/.*SNAPSHOT/,/---/p' RELEASE_NOTES.md  | sed '/^---.*$/d' >> snapshot-release-notes.md
         shell: bash
 
       - name: Build with Maven
