Added Redisson support

--- a/padogrid-deployment/src/main/resources/redis/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/redis/apps/perf_test/pom.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.hazelcast.addon</groupId>
+	<groupId>org.redisson.addon</groupId>
 	<version>0.9.18-SNAPSHOT</version>
 	<artifactId>padogrid-perf_test</artifactId>
 	<packaging>pom</packaging>
@@ -12,17 +9,17 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hazelcast.version>5.0</hazelcast.version>
+    <redisson.version>3.17.3</redisson.version>
 		<hibernate.version>5.6.9.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
-		<!-- Hazelcast -->
-		<dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast</artifactId>
-			<version>${hazelcast.version}</version>
-		</dependency>
+    <!-- Redisson -->
+    <dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>${redisson.version}</version>
+    </dependency>
 
 		<!-- Hibernate app -->
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -64,6 +61,13 @@
 			<groupId>org.jboss.spec.javax.transaction</groupId>
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.1.1.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+		<!-- Required for LocalDateTime causing JDK1.8 exception -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.3</version>
 		</dependency>
 	</dependencies>
 
