--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -19,6 +19,7 @@
 		<geode-core.project.dir>../geode-addon-core</geode-core.project.dir>
 		<hazelcast-core-3.project.dir>../hazelcast-addon-core-3</hazelcast-core-3.project.dir>
 		<hazelcast-core-4.project.dir>../hazelcast-addon-core-4</hazelcast-core-4.project.dir>
+		<hazelcast-core-5.project.dir>../hazelcast-addon-core-5</hazelcast-core-5.project.dir>
 	</properties>
 
 	<dependencies>
@@ -32,7 +33,12 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-            <version>2.17.1</version>
+            <version>${log4j2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
 		</dependency>
 
 		<!-- padogrid-tools -->
