--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<padogrid.version>${project.version}</padogrid.version>
 		<geode.version>1.14.4</geode.version>
+		<log4j2.version>2.17.1</log4j2.version>
 		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
@@ -111,6 +112,7 @@
 				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
+				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
 				<module>padogrid-deployment</module>
@@ -134,6 +136,7 @@
 				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
+				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
 				<module>padogrid-deployment</module>
