--- a/redisson-addon-core/pom.xml
+++ b/redisson-addon-core/pom.xml
@@ -1,16 +1,4 @@
-<!-- Copyright (c) 2020 Netcrest Technologies, LLC. All rights reserved. 
-	Licensed under the Apache License, Version 2.0 (the "License"); you may not 
-	use this file except in compliance with the License. You may obtain a copy 
-	of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-	by applicable law or agreed to in writing, software distributed under the 
-	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-	OF ANY KIND, either express or implied. See the License for the specific 
-	language governing permissions and limitations under the License. -->
-
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -18,23 +6,55 @@
 		<artifactId>padogrid-parent</artifactId>
 		<version>0.9.18-SNAPSHOT</version>
 	</parent>
-	<artifactId>padogrid-all</artifactId>
-	<packaging>pom</packaging>
-	<name>${project.artifactId}</name>
-	<description>Build padogrid-all jars</description>
+	<artifactId>redisson-addon-core</artifactId>
+	<packaging>jar</packaging>
+	<name>redisson-addon-core</name>
+	<description>Redisson addon core library</description>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.14.2</geode.version>
+		<redisson.version>3.17.3</redisson.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
+		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
 
 	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>padogrid.addon</groupId>
+			<artifactId>padogrid-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>${redisson.version}</version>
+		</dependency>
+		
+		<dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-resolver-dns-native-macos</artifactId>
+          <version>4.1.78.Final</version>
+          <classifier>osx-x86_64</classifier>
+        </dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>4.7.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
 		<dependency>
 			<groupId>javax.persistence</groupId>
@@ -56,10 +76,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.16</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.17.1</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Spring -->
@@ -83,14 +106,38 @@
 			<version>2.9.1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-core -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-core</artifactId>
+			<version>1.2.0.Final</version>
 		</dependency>
 
+		<!-- Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-tools</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+
+		<!-- Confluent Kafka Connect Avro -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-connect-avro-data</artifactId>
+			<version>5.5.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -107,7 +154,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.1.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -126,27 +173,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<id>coherence</id>
-			<modules>
-				<!-- Include Coherence. It must be built separately due to the lack 
-					of public Maven support. -->
-				<module>padogrid-coherence-all</module>
-			</modules>
-		</profile>
-	</profiles>
-	
-	<modules>
-		<!-- Leave out Coherence. It must be built separately due to the lack of 
-			public Maven support. Use '-Pcoherence' to include Coherence. -->
-		<module>padogrid-geode-all</module>
-		<module>padogrid-hazelcast-all-3</module>
-		<module>padogrid-hazelcast-all-4</module>
-		<module>padogrid-hazelcast-all-5</module>
-		<module>padogrid-jet-all-3</module>
-		<module>padogrid-jet-all-4</module>
-		<module>padogrid-redisson-all</module>
-		<module>padogrid-snappydata-all</module>
-	</modules>
+
 </project>
