--- a/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group-factory.properties
+++ b/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group-factory.properties
@@ -1,10 +1,10 @@
 # -------------------------------------------------------------------------
 # Overview:
 #
-# Group test cases allow you to create and test groups of Geode operations.
-# You can think of a group as a function invoking one or more Geode operations.
+# Group test cases allow you to create and test groups of Coherence operations.
+# You can think of a group as a function invoking one or more Coherence operations.
 # As an example, a group could contain put, get, put, get calls making a total
-# of four (4) Geode Region (Map) calls. You can designate threads to invoke this
+# of four (4) Coherence NamedCache (Map) calls. You can designate threads to invoke this
 # group and measure the average latency of each group (function) call.
 # -------------------------------------------------------------------------
 
@@ -38,7 +38,7 @@ groupNames=g1,g2,g3,g4
 # -------------------------------------------------------------------------
 # Group:
 #
-# A group represents a function that invokes one or more Geode Region (Map) methods.
+# A group represents a function that invokes one or more Coherence NamedCache (Map) methods.
 #
 # name         Group name.
 #
