--- a/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group-put.properties
+++ b/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group-put.properties
@@ -1,10 +1,10 @@
 # -------------------------------------------------------------------------
 # Overview:
 #
-# Group test cases allow you to create and test groups of Geode operations.
-# You can think of a group as a function invoking one or more Geode operations.
+# Group test cases allow you to create and test groups of Coherence operations.
+# You can think of a group as a function invoking one or more Coherence operations.
 # As an example, a group could contain set, get, put, get calls making a total
-# of four (4) Geode Region (Map) calls. You can designate threads to invoke this
+# of four (4) Coherence NamedCache (Map) calls. You can designate threads to invoke this
 # group and measure the average latency of each group (function) call.
 # -------------------------------------------------------------------------
 
@@ -34,7 +34,7 @@ groupNames=g1
 # -------------------------------------------------------------------------
 # Group:
 #
-# A group represents a function that invokes one or more Geode Region (Map) methods.
+# A group represents a function that invokes one or more Coherence NamedCache (Map) methods.
 #
 # name         Group name.
 #
@@ -53,7 +53,7 @@ groupNames=g1
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# Invoke 22 operations that ingest data into Geode using putAll() 
+# Invoke 22 operations that ingest data into Coherence using putAll() 
 g1.name=Multi-PutAll
 g1.threadCount=10
 g1.operations=put1,put2,put3,put4,put5,put6,put7,put8,put9,put10,put11,put12,put13,put14,put15,put16,put17,put18,put19,put20,put21,put22
