--- a/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group.properties
+++ b/padogrid-deployment/src/main/resources/coherence/apps/perf_test/etc/group.properties
@@ -1,10 +1,10 @@
 # -------------------------------------------------------------------------
 # Overview:
 #
-# Group test cases allow you to create and test groups of Geode operations.
-# You can think of a group as a function invoking one or more Geode operations.
+# Group test cases allow you to create and test groups of Coherence operations.
+# You can think of a group as a function invoking one or more Coherence operations.
 # As an example, a group could contain set, get, put, get calls making a total
-# of four (4) Geode Region (Map) calls. You can designate threads to invoke this
+# of four (4) Coherence NamedCache (Map) calls. You can designate threads to invoke this
 # group and measure the average latency of each group (function) call.
 # -------------------------------------------------------------------------
 
@@ -38,7 +38,7 @@ groupNames=g1&g2,g3&g4
 # -------------------------------------------------------------------------
 # Group:
 #
-# A group represents a function that invokes one or more Geode Region (Map) methods.
+# A group represents a function that invokes one or more Coherence NamedCache (Map) methods.
 #
 # name         Group name.
 #
@@ -62,27 +62,28 @@ groupNames=g1&g2,g3&g4
 g1.name=Put Test
 g1.threadCount=8
 g1.operations=put1
-g1.comment=Region.put() test (1 KiB payload in map1)
+g1.comment=NamedCache.put() test (1 KiB payload in map1)
 g1.totalInvocationCount=100000
 
-# g2 performs bulk puts using Region.putAll()
+# g2 performs bulk puts using NamedCache.putAll()
 g2.name=PutAll Test
 g2.threadCount=8
 g2.operations=putall1
-g2.comment=Region.putAll() test (1 KiB payload in map2)
+g2.comment=NamedCache.putAll() test (1 KiB payload in map2)
 g2.totalInvocationCount=1000
 
-# g3 gets 10
+# g3 invokes NamedCache.get() 100,000 times
 g3.name=Get Test
 g3.threadCount=8
 g3.operations=get1
-g3.comment=Region.get() test (1 KiB payload from map1)
+g3.comment=NamedCache.get() test (1 KiB payload from map1)
 g3.totalInvocationCount=100000
 
+# g4 invokes NamedCache.getAll() 
 g4.name=GetAll Test
 g4.threadCount=8
 g4.operations=getall1
-g4.comment=Region.getAll() test (1 KiB payload from map2)
+g4.comment=NamedCache.getAll() test (1 KiB payload from map2)
 g4.totalInvocationCount=10000
 
 # -------------------------------------------------------------------------
