--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group.properties
@@ -69,13 +69,14 @@ g2.operations=putall1
 g2.comment=Region.putAll() test (1 KiB payload in map2)
 g2.totalInvocationCount=1000
 
-# g3 gets 10
+# g3 invokes Region.get() 100,000 times
 g3.name=Get Test
 g3.threadCount=8
 g3.operations=get1
 g3.comment=Region.get() test (1 KiB payload from map1)
 g3.totalInvocationCount=100000
 
+# g4 invokes Region.getAll() 
 g4.name=GetAll Test
 g4.threadCount=8
 g4.operations=getall1
